# wardrobe-life-dashboard

./: .gitignore  2026-04-26_wardrobe_build2_complete.md  README.md
.claude/: launch.json
.github/workflows/: desktop-release.yml
Data Page/design_handoff_data/: Data.html  README.md
Life Board/design_handoff_life_board/: README.md
Timeline/timeline_handoff/: README.md
app/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
app/api/: link-meta.ts  scripture.ts
app/scripts/: preview-sanctuary-import.mjs  preview-timeline-import.mjs
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/test/: backupExports.test.ts  bibleRef.test.ts  binderTree.test.ts  dataAggregation.test.ts  (+35 more)
docs/: Life Dashboard Ideas.txt
reports/: 2026-05-02 — Data Build 2 Book × Chapter.md  2026-05-02 — Data Build 2 Stats.md  2026-05-02 — Data Build 3 Reading Plans.md  2026-05-02 — Data Build 4 Verification Pass.md  2026-05-02 — Data polish (heatmap labels + sizing + sanctuary links).md  2026-05-02 — Heatmap DST fix.md  2026-05-03 — Goodreads import + edit book.md  2026-05-03 — Stats Scripture-Books toggle + year paging + expandable retros.md  2026-05-03 — Three small fixes (year paging, rail width, sanctuary refs).md  2026-05-24 — Daybook Build 1.md  2026-05-24 — Daybook Build 2.md  2026-05-24 — Daybook Build 3.md  2026-05-24 — Treasury Build 1.md  2026-05-24 — Treasury Build 2.md
(+98 files in other folders)
